--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 theme: jekyll-theme-minimal
 root: /
 # i just write some stuff to try to push it LOL
+# i just write some stuff to try to push it LOL
+# i just write some stuff to try to push it LOL
+# i just write some stuff to try to push it LOL
